--- a/src/main.css
+++ b/src/main.css
@@ -32,7 +32,7 @@ body {
 .input::placeholder {
     text-align: center;
     color: var(--color);
-    background-image: url(../public/search.svg);
+    background-image: url(../public/img/search.svg);
     background-size: 15px;
     background-repeat: no-repeat;
     background-position: 1rem center;
